Made sections of my page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> About me Page </h1>
+    <header>
+        <h1> This is the header section</h1>
+    </header>
+    <section>
+        <h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos aspernatur blanditiis facere 
+            dolores voluptate veritatis soluta porro dolorem quam quis? Pariatur, quis iusto illo tenetur aspernatur 
+            eos impedit maiores neque. </h1>
+    </section>
+
+    <footer>
+        <h1>Footer section</h1>
+    </footer>
 </body>
 </html>
