added images folder with image inside

--- a/contact-us.html
+++ b/contact-us.html
@@ -51,6 +51,7 @@
               <button type="submit" class="btn btn-primary">Sign in</button>
             </div>
           </form>
+          <img src="../images/pexels-sam-lion-5710204.jpg" alt="">
     </section>
 </body>
 </html>
