added h5 to index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <section>
         <h1 class="border-text">Getting Spacey</h1>
+        <h5>Arsenal is the best</h5>
     </section>
 </body>
 </html>
